[package]
name = "hanphone-blog"
version = "0.1.0"
description = "寒枫的个人博客"
authors = ["寒枫"]
edition = "2021"

[lib]
name = "hanphone_blog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
